# mtxSolverPetsc

./: CMakeLists.txt  README.md
include/: blockmatrices.hpp  testutils.h
src/: CMakeLists.txt  blockmatrices.ipp  rawsrmatrixutils.cpp  runpetscsingle.c  runpetsctest.c  testutils.c  testutils.cpp
src/blas/: matvecs.cpp  matvecs.hpp
tests/: CMakeLists.txt  opts.perc
tests/mat_ops/: CMakeLists.txt  runbsrmatrixtest.cpp
